[gd_scene load_steps=5 format=3 uid="uid://c8cnnurf7by65"]

[ext_resource type="Script" path="res://scene/testing/encounter-system-criminal/test.gd" id="1_6x8bx"]
[ext_resource type="PackedScene" uid="uid://0iy482q4dmyn" path="res://scene/world/mobs/criminal/criminal.tscn" id="1_wljva"]
[ext_resource type="PackedScene" uid="uid://cjbrx20evdha" path="res://scene/player/player.tscn" id="2_w07yq"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_137qm"]
vertices = PackedVector2Array(-116, -83, 1436, -88, 1461, 882, -78, 861)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-116, -83, 1436, -88, 1461, 882, -78, 861)])

[node name="test" type="Node2D"]
script = ExtResource("1_6x8bx")

[node name="criminal" parent="." node_paths=PackedStringArray("encounter_target") instance=ExtResource("1_wljva")]
position = Vector2(412, 243)
refresh_time = 1.0
encounter_state = 1
encounter_target = NodePath("../Player")

[node name="Player" parent="." instance=ExtResource("2_w07yq")]
position = Vector2(98, 214)

[node name="wall" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="wall"]
polygon = PackedVector2Array(28, 727, 1340, 727, 1340, 23, 13, 23, 22, 708, -70, 708, -87, -45, 1408, -64, 1419, 854, -44, 822, -36, 716)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_137qm")

[node name="player_marker" type="Marker2D" parent="."]
position = Vector2(1168, 419)

[node name="criminal_marker" type="Marker2D" parent="."]
position = Vector2(135, 381)

[connection signal="is_criminal_catch_player" from="criminal" to="." method="_on_criminal_is_criminal_catch_player"]
[connection signal="is_maximum_number_of_arrests" from="criminal" to="." method="_on_criminal_is_maximum_number_of_arrests"]
